# libfts

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO_BEFORE_PUSH  a.out  main.c  test.c
bonus/: ft_abs.asm  ft_itoa.asm  ft_strcmp.asm
bonus_elf64/: ft_abs.s  ft_itoa.s  ft_memcmp.s  ft_memmove.s  ft_strcmp.s
bonus_macho64/: ft_abs.s  ft_itoa.s  ft_memcmp.s  ft_memmove.s  ft_strcmp.s
include/: dependencies.h  libft.h  libfts.h
include/libft/: io.h  mem.h  str.h
io/: ft_puts.asm
mem/: ft_bzero.asm
src/: ft_cat.asm  ft_isalnum.asm  ft_memset.asm  ft_tolower.asm  ft_toupper.asm
src_elf64/: ft_bzero.s  ft_cat.s  ft_isalnum.s  ft_isalpha.s  ft_isascii.s  ft_isdigit.s  ft_isprint.s  ft_memcpy.s  ft_memset.s  ft_puts.s  ft_strcat.s  ft_strdup.s  ft_strlen.s  ft_tolower.s  ft_toupper.s
src_macho64/: ft_bzero.s  ft_cat.s  ft_isalnum.s  ft_isalpha.s  ft_isascii.s  ft_isdigit.s  ft_isprint.s  ft_memcpy.s  ft_memset.s  ft_puts.s  ft_strcat.s  ft_strdup.s  ft_strlen.s  ft_tolower.s  ft_toupper.s
str/: ft_strcat.asm  ft_strlen.asm
tests/: Makefile
tests/includes/: tests.h
tests/sources/: main.c  test_bzero.c  test_cat.c  test_ctype.c  test_isalnum.c  test_isalpha.c  test_isascii.c  test_isblank.c  test_iscntrl.c  test_isdigit.c  test_isgraph.c  test_islower.c  test_isprint.c  test_ispunct.c  test_isspace.c  test_isupper.c  test_isxdigit.c  test_memchr.c  test_memcmp.c  test_memcpy.c  test_memset.c  test_putchar.c  test_puts.c  test_strcat.c  test_strchr.c  test_strcmp.c  test_strdup.c  test_strlen.c  test_tolower.c  test_toupper.c
